# rossdl

./: README.md
.github/workflows/: main.yaml  rolling.yaml
rossdl_cmake/: CMakeLists.txt  package.xml  rossdl_cmake-extras.cmake  rossdl_generator_cpp-extras.cmake.in
rossdl_cmake/cmake/: register_cpp.cmake  register_system.cmake  rossdl_cmake-extras.cmake.in  rossdl_cmake_package_hook.cmake  rossdl_generate_code.cmake  rossdl_generate_system.cmake
rossdl_cmake/resources/: launcher.py.em  nodes.cpp.em  nodes.hpp.em
rossdl_cmake/rossdl_cmake/: __init__.py
rossdl_cmake/tests/: Nodes.cpp.test  Nodes.hpp.test  description.ros2  description.rossystem  description.sdl  system_1.launch.py.test  system_2.launch.py.test  test_rossdl.py
rossdl_test/: CMakeLists.txt  description.sdl  package.xml
rossdl_test/include/rossdl_test/: Consumer.hpp  ImageFilter.hpp  Nodes2.hpp
rossdl_test/src/: rossdl_test_main.cpp
rossdl_test/src/rossdl_test/: Consumer.cpp  ImageFilter.cpp  Nodes2.cpp
rossdl_test/tests/: rossdl_generation_test.cpp
rossdl_tests/rossdl_simple_test/: CMakeLists.txt  description.ros2  description.rossystem  package.xml
rossdl_tests/rossdl_simple_test/include/rossdl_simple_test/: Consumer.hpp  ImageFilter.hpp
rossdl_tests/rossdl_simple_test/src/rossdl_simple_test/: Consumer.cpp  ImageFilter.cpp
rossdl_tests/rossdl_simple_test/tests/: CMakeLists.txt  rossdl_generation_test.cpp
rossdl_tests/rossdl_systems_test/application_1/: CMakeLists.txt  app_1.rossystem  package.xml
rossdl_tests/rossdl_systems_test/application_2/: CMakeLists.txt  app_2.rossystem  package.xml
rossdl_tests/rossdl_systems_test/application_3/: CMakeLists.txt  app_3.rossystem  package.xml
rossdl_tests/rossdl_systems_test/system_a/: CMakeLists.txt  description.ros2  package.xml  test
rossdl_tests/rossdl_systems_test/system_a/include/system_a/: ImageFilter.hpp
rossdl_tests/rossdl_systems_test/system_a/src/system_a/: ImageFilter.cpp
rossdl_tests/rossdl_systems_test/system_a/tests/: CMakeLists.txt  rossdl_generation_test.cpp
rossdl_tests/rossdl_systems_test/system_b/: CMakeLists.txt  description.ros2  package.xml
rossdl_tests/rossdl_systems_test/system_b/include/system_b/: Consumer.hpp
rossdl_tests/rossdl_systems_test/system_b/src/system_b/: Consumer.cpp
rossdl_tests/rossdl_systems_test/system_b/tests/: rossdl_generation_test.cpp
